--- a/tutorial/flaskr/templates/auth/register.html
+++ b/tutorial/flaskr/templates/auth/register.html
@@ -6,6 +6,16 @@
 
 {% block content %}
   <form method="post">
+    <label for="name">Name</label>
+    <input name="name" id="name" required>
+    <label for="address">Address</label>
+    <input name="address" id="address" required>
+    <!-- <label for="name">Name</label>
+    <input name="name" id="name" required> -->
+    <label for="locality">Locality</label>
+    <input name="locality" id="locality" required>
+    <label for="contact">Contact No.</label>
+    <input name="contact" id="contact" required>
     <label for="username">Username</label>
     <input name="username" id="username" required>
     <label for="password">Password</label>
