added my dishes

--- a/tutorial/flaskr/templates/dish/mydishes.html
+++ b/tutorial/flaskr/templates/dish/mydishes.html
@@ -1,25 +1,22 @@
 {% extends 'base.html' %}
 
 {% block header %}
-  <h1>{% block title %}Register{% endblock %}</h1>
+  <h1>{% block title %}My Dishes{% endblock %}</h1>
 {% endblock %}
 
 {% block content %}
-  <form method="post">
-    <label for="name">Name</label>
-    <input name="name" id="name" required>
-    <label for="address">Address</label>
-    <input name="address" id="address" required>
-    <!-- <label for="name">Name</label>
-    <input name="name" id="name" required> -->
-    <label for="locality">Locality</label>
-    <input name="locality" id="locality" required>
-    <label for="contact">Contact No.</label>
-    <input name="contact" id="contact" required>
-    <label for="username">Username</label>
-    <input name="username" id="username" required>
-    <label for="password">Password</label>
-    <input type="password" name="password" id="password" required>
-    <input type="submit" value="Register">
-  </form>
+<table>
+    <tr>
+        <td>Name</td>
+        <td>Description</td>
+        <td>Price</td>
+    </tr>
+    {% for item in g.myDishes %}
+    <tr>
+        <td>{{item.name}}</td>
+        <td>{{item.description}}</td>
+        <td>{{item.price}}</td>
+    </tr>
+    {% endfor %}
+</table>
 {% endblock %}
