--- a/tutorial/flaskr/static/style.css
+++ b/tutorial/flaskr/static/style.css
@@ -132,3 +132,12 @@ input[type=submit] {
   align-self: start;
   min-width: 10em;
 }
+
+table, th, td {
+  border: 1px solid black;
+  border-collapse: collapse;
+}
+
+th, td {
+  padding: 15px;
+}
