--- a/tutorial/flaskr/templates/dish/sell.html
+++ b/tutorial/flaskr/templates/dish/sell.html
@@ -7,8 +7,11 @@
 {% block content %}
   <form method="post">
     {% for item in g.dishList %}
-        <label>  {{item.name}} <input type="checkbox" name="name"  value={{item.name}} > </label>
+        <label>     {{item.name}} <input type="checkbox" name="name"  value={{item.name}} > </label>
     {% endfor %}
+    <label for="quantity">  Quantity</label><input type="number" name="quantity" id="quantity"  >
+     <label for="stime">  Start time </label><input type="number" name="stime" id="stime"  >
+    <label for="etime">  End time</label><input type="number" name="etime" id="etime"  >
     <input type="submit" value="Add in my selling list">
   </form>
 {% endblock %}
