--- a/tutorial/flaskr/templates/base.html
+++ b/tutorial/flaskr/templates/base.html
@@ -9,8 +9,10 @@
         <li><a href="{{ url_for('auth.profile') }}">Profile</a>
         <li><a href="{{ url_for('dish.mydishes') }}">My Dishes</a>
         <li><a href="{{ url_for('dish.addDish') }}">Add Dish</a>
+        <li><a href="{{ url_for('dish.salelist') }}">My Items on sale</a>
         <li><a href="{{ url_for('dish.mealInvites') }}">Meal Invite</a>
         <li><a href="{{ url_for('dish.sell') }}">Sell items</a>
+        <li><a href="{{ url_for('buyer.order') }}">Order</a>
         <li><a href="{{ url_for('auth.logout') }}">Log Out</a>
     {% else %}
       <li><a href="{{ url_for('auth.register') }}">Register</a>
