made menu pages

--- a/tutorial/flaskr/templates/dish/mealInvites.html
+++ b/tutorial/flaskr/templates/dish/mealInvites.html
@@ -18,7 +18,7 @@
             <td>{{item.startTime}}</td>
             <td>{{item.endTime}}</td>
             <td>{{item.type}}</td>
-            <td><a href="{{url_for('dish.mealMenu',id=item.buffetNo)}}">View Menu</a></td>
+            <td><a href="{{url_for('dish.mealMenu',id=item.buffetNo)}}">View Details</a></td>
         </tr>
         {% endfor %}
     </table>
