--- a/tutorial/flaskr/templates/buyer/meal.html
+++ b/tutorial/flaskr/templates/buyer/meal.html
@@ -28,7 +28,9 @@
         </h5>
         {% endfor %}
     </h3>
+    <form method="POST">
     <label for="seats" > No. of Seats </label><input type="number" name="seats" id="seats" required>
     <br>
     <input type="submit" value="Confirm Booking">
+    </form>
 {% endblock %}
