--- a/tutorial/flaskr/templates/base.html
+++ b/tutorial/flaskr/templates/base.html
@@ -15,6 +15,7 @@
         <li><a href="{{ url_for('buyer.order') }}">Order</a>
         <li><a href="{{ url_for('buyer.joinMeal') }}">Join Meal</a>
         <li><a href="{{ url_for('order_buyer.view') }}">my_bought_orders</a>
+        <li><a href="{{ url_for('order_seller.view') }}">my pending orders</a> </li>
         <li><a href="{{ url_for('auth.logout') }}">Log Out</a>
     {% else %}
       <li><a href="{{ url_for('auth.register') }}">Register</a>
