--- a/tutorial/flaskr/templates/order_sell/orderDetails.html
+++ b/tutorial/flaskr/templates/order_sell/orderDetails.html
@@ -32,11 +32,13 @@
             </tr>
             {% endfor %}
         </table>
+        {% if g.od.status == 'Pending' %}
         <form method="POST">
             <label>Accept Order<input type="checkbox" name="decision" value="accept"></label>
             <label>Reject Order<input type="checkbox" name="decision" value="reject"></label>
             <input type="submit" value="submit">
         </form>
+        {% endif %}
     </div>
 
 {% endblock %}
