--- a/tutorial/flaskr/templates/buyer/joinMeal.html
+++ b/tutorial/flaskr/templates/buyer/joinMeal.html
@@ -9,7 +9,7 @@
 	<div>
 		<h2>  Seller-{{user}}  </h2>
         MEALS
-        <table>
+        <table class="table">
             <tr>
                 <th>Start Time</th>
                 <th>End Time</th>
