--- a/tutorial/flaskr/templates/auth/profile.html
+++ b/tutorial/flaskr/templates/auth/profile.html
@@ -1,22 +1,24 @@
 {% extends 'base.html' %}
 
 {% block header %}
-  <h1>{% block title %}Profile{% endblock %}</h1>
 {% endblock %}
 
 {% block content %}
-<h5>
-    Username : {{g.user["username"]}}
-    <br>
-    Name : {{g.user["name"]}}
-    <br>
-    Address: {{g.user["address"]}}
-    <br>
-    Locality: {{g.user["locality"]}}
-    <br>
-    Seller Rating : {{g.user["ratingSum"]}}
-    <br>
-    Contact No. : {{g.user["contact"]}}
-    <br>
-</h5>
+<div class="profile">
+    <h1>{% block title %}Profile{% endblock %}</h1>
+    <h5>
+        Username : {{g.user["username"]}}
+        <br>
+        Name : {{g.user["name"]}}
+        <br>
+        Address: {{g.user["address"]}}
+        <br>
+        Locality: {{g.user["locality"]}}
+        <br>
+        Seller Rating : {{g.user["ratingSum"]}}
+        <br>
+        Contact No. : {{g.user["contact"]}}
+        <br>
+    </h5>
+</div>
 {% endblock %}
