--- a/tutorial/flaskr/templates/buyer/joinMeal.html
+++ b/tutorial/flaskr/templates/buyer/joinMeal.html
@@ -7,9 +7,10 @@
 	{%	for user in g.mealDict  %}
 
 	<div>
-		<h2>  Seller-{{user}}  </h2>
-        MEALS
-        <table class="table">
+		<h2 style="font-size:200% left:-30%">  {{user}}  </h2>
+
+        <table class="tab">
+            <thead>
             <tr>
                 <th>Start Time</th>
                 <th>End Time</th>
@@ -18,7 +19,9 @@
                 <th>Type</th>
                 <th>Details</th>
             </tr>
+            </thead>
         {% for item in g.mealDict[user] %}
+            <tbody>
             <tr>
                 <td>{{item.startTime}}</td>
                 <td>{{item.endTime}}</td>
@@ -27,6 +30,7 @@
                 <td>{{item.type}}</td>
                 <td> <a href="{{url_for('buyer.meal',id=item.buffetNo)}}">View Details</a> </td>
             </tr>
+            </tbody>
         {% endfor %}
     </table>
     </div>
