--- a/tutorial/flaskr/templates/buyer/order.html
+++ b/tutorial/flaskr/templates/buyer/order.html
@@ -4,6 +4,15 @@
   <h1>{% block title %}Order Food now{% endblock %}</h1>
 {% endblock %}
 {% block content %}
+	<form method="POST">
+		<label for="search">Search</label>
+		<select name="type">
+			<option value="Dish">Dish Name</option>
+			<option value="Seller">Seller Name</option>
+		</select>
+		<input type="text" name="search" id="search">
+		<input type="submit" value="Go">
+	</form>
 	{%	for user in g.uDict  %}
 
 	<div>
