--- a/tutorial/flaskr/templates/buyer/joinMeal.html
+++ b/tutorial/flaskr/templates/buyer/joinMeal.html
@@ -7,7 +7,7 @@
 	{%	for user in g.mealDict  %}
 
 	<div>
-		<h2 style="font-size:200% left:-30%">  {{user}}  </h2>
+		<h2 style="font-size:200% ;margin-left:500px">  {{user}}  </h2>
 
         <table class="tab">
             <thead>
