--- a/tutorial/flaskr/static/style.css
+++ b/tutorial/flaskr/static/style.css
@@ -72,3 +72,79 @@ div.profile{
     color: Black;
     padding: 10px;
 }
+
+
+input[type=text], select {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+input[type=password ], select {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+input[type=number ], select {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+input[type=checkbox ], select {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+input[type=submit] {
+  width: 100%;
+  background-color: #4CAF50;
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+input[type=submit]:hover {
+  background-color: #45a049;
+}
+
+div.forms {
+  border-radius: 5px;
+  background-color: #f2f2f2;
+  padding: 20px;
+  left:40%;
+  top:10%;
+  font-size: 35px;
+}
+div.meals{
+  position:absolute;
+  top:35.7%;
+  right:33%;
+  /*align-self: center;*/
+  /*align-items: center;  */
+  margin-top:-300px; /* this is half the height of your div*/  
+  margin-left:-100px; 
+  background-color:Red ;
+  border: 2 px solid black;
+  font-size: 30px;
+  font-family: sans-serif;
+  padding: 10px 150px 100px 100px
+}
