--- a/tutorial/flaskr/templates/auth/register.html
+++ b/tutorial/flaskr/templates/auth/register.html
@@ -5,21 +5,21 @@
 {% endblock %}
 
 {% block content %}
+  <div class = "forms">
   <form method="post">
     <label for="name">Name</label>
-    <input name="name" id="name" required>
+    <input type="text" name="name" id="name" placeholder="Your name.." required>
     <label for="address">Address</label>
-    <input name="address" id="address" required>
-    <!-- <label for="name">Name</label>
-    <input name="name" id="name" required> -->
+    <input type="text" name="address" id="address" required>
     <label for="locality">Locality</label>
-    <input name="locality" id="locality" required>
+    <input type="text" name="locality" id="locality" required>
     <label for="contact">Contact No.</label>
-    <input name="contact" id="contact" required>
+    <input type="text" name="contact" id="contact" required>
     <label for="username">Username</label>
-    <input name="username" id="username" required>
+    <input type="text" name="username" id="username" required>
     <label for="password">Password</label>
     <input type="password" name="password" id="password" required>
     <input type="submit" value="Register">
   </form>
+    </div>
 {% endblock %}
