--- a/tutorial/flaskr/templates/dish/mealInvites.html
+++ b/tutorial/flaskr/templates/dish/mealInvites.html
@@ -6,24 +6,29 @@
 
 {% block content %}
 <h2>
-    Meals 
-    <table>
-        <tr>
-            <td>Start Time</td>
-            <td>End Time</td>
-            <td>Veg/Non-Veg/Mixed</td>
-        </tr>
+    <table class="tab">
+        <thead>
+            <tr>
+                <th>Start Time</th>
+                <th>End Time</th>
+                <th>Veg/Non-Veg/Mixed</th>
+                <th>Details</th>
+            </tr>
+        </thead>
+        <tbody>
         {% for item in g.menuList %}
-        <tr>
-            <td>{{item.startTime}}</td>
-            <td>{{item.endTime}}</td>
-            <td>{{item.type}}</td>
-            <td><a href="{{url_for('dish.mealMenu',id=item.buffetNo)}}">View Details</a></td>
-        </tr>
+            <tr>
+                <td>{{item.startTime}}</td>
+                <td>{{item.endTime}}</td>
+                <td>{{item.type}}</td>
+                <td><a href="{{url_for('dish.mealMenu',id=item.buffetNo)}}">View Details</a></td>
+            </tr>
         {% endfor %}
+        </tbody >
     </table>
 </h2>
+    <br>
 <h3>
-    <a href="{{url_for('dish.addInvite')}}">Create New Meal</a>
+    <a href="{{url_for('dish.addInvite')}}" style="font-size: 30px; margin-left: 15% ;color:white; background:black ;border:solid black 10px;  ">Create New Meal</a>
 </h3>
 {% endblock %}
