--- a/tutorial/flaskr/templates/order_buy/details.html
+++ b/tutorial/flaskr/templates/order_buy/details.html
@@ -5,12 +5,15 @@
 {% endblock %}
 {% block content %}
     <div>
-        <table>
+        <table class="tab">
+            <thead>
             <tr>
                 <th>Item Name</th>
                 <th>Price</th>
                 <th>Quantity</th>
             </tr>
+            </thead>
+            <tbody>
             {% for item in g.orderDetail %}
                 <tr>
                     <td>{{item.itemName}}</td>
@@ -18,6 +21,7 @@
                     <td>{{item.qty}}</td>
                 </tr>
           {% endfor %}
+           </tbody>
         </table>
     </div>
 
