--- a/tutorial/flaskr/templates/base.html
+++ b/tutorial/flaskr/templates/base.html
@@ -16,6 +16,7 @@
         <div><li><a href="{{ url_for('dish.sell') }}">Sell items</a></div>
         <div><li><a href="{{ url_for('buyer.order') }}">Order</a></div>
         <div><li><a href="{{ url_for('buyer.joinMeal') }}">Join Meal</a></div>
+        <div><li><a href="{{ url_for('order_buyer.myMeal') }}">My Meals</a></div>
         <div><li><a href="{{ url_for('order_buyer.view') }}">my_bought_orders</a></div>
         <div><li><a href="{{ url_for('order_seller.view') }}">my pending orders</a> </li></div>
     {% else %}
