--- a/tutorial/flaskr/static/style.css
+++ b/tutorial/flaskr/static/style.css
@@ -1,6 +1,6 @@
  body {
- /*background-image: url("https://i.pinimg.com/originals/a7/16/be/a716bef1009b73c3f3b80ee549c2ff3b.jpg");*/
- background-color: #FFA500;
+ background-image: url("https://previews.123rf.com/images/romastudio/romastudio1603/romastudio160300203/54088672-healthy-food-background-studio-photo-of-different-fruits-and-vegetables-on-white-wooden-table-high-r.jpg");
+ /*background-color: #FFA500;*/
 }
 div.base{
   position: absolute;
