--- a/tutorial/flaskr/templates/dish/salelist.html
+++ b/tutorial/flaskr/templates/dish/salelist.html
@@ -11,7 +11,7 @@
         <th>Name</th>
         <th>Description</th>
         <th>Start time</th>
-        <th>Enh time</th>
+        <th>End time</th>
         <th>Quantity remaining</th>
         <th>Type</th>
         <th>Price</th>
